# euclidean_hausdorff

./: .gitignore  CHANGELOG.md  EuclideanSimModel.py  README.md  anyresum_experiments.py  classifiers.py  eucl_haus.py  geometry.py  loss.py  main.py  mnist.py  optimizers.py  point_cloud.py  point_cloud_example.ipynb  points.py  pyproject.toml  setup.py  torch_experiments.py  transformation.py  utils.py  voronoi.py  worknotes.txt
euclidean_hausdorff/: __init__.py  eucl_haus.py  main.py  monte_carlo_exp.py  point_cloud.py  point_cloud_example.ipynb  riem_opt.py  utils.py
test/: eucl_haus_perf.py  eucl_haus_test.py
