[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "euclidean_hausdorff"
version = "1.3.2"
license={file="LICENSE"}
authors = [
    {name="Vladyslav Oles", email="vlad.oles@proton.me"},
    {name="Blake Cecil"}
]
description = "quick approximation of the Gromov–Hausdorff distance restricted to Euclidean isometries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "sortedcontainers>=2.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bcecil2/euclidean_hausdorff"
Issues = "https://github.com/bcecil2/euclidean_hausdorff/issues"

[tool.hatch.build.targets.wheel]
packages = ["euclidean_hausdorff"]
